--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Price Regression Homepage</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="{{ url_for('static', filename='scripts.js') }}" defer></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}">
+    <script src="{{ url_for('static', filename = 'js/script.js') }}" defer></script>
 </head>
 <body>
     <header>
         <h1>Welcome to the House Price Regression App</h1>
         <nav>
             <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
+                <li><a href="{{ url_for('train') }}">Training</a></li>
+                <li><a href="{{ url_for('prediction') }}">Prediction</a></li>
             </ul>
         </nav>
     </header>
