--- a/templates/training.html
+++ b/templates/training.html
@@ -30,7 +30,7 @@
                         <label for="model-type">Model Type:</label>
                         <select id="model-type" name="model_type" required>
                             <option value="linear_regression">Linear Regression</option>
-                            <option value="gradient_boost">Gradient Boost</option>
+                            <option value="gradient_boosting">Gradient Boosting</option>
                             <option value="random_forest">Random Forest</option>
                         </select>
                     </div>
