--- a/templates/training.html
+++ b/templates/training.html
@@ -21,7 +21,7 @@
     <main>
         <h2>Train your Model</h2>
         <div id="training-section">
-            <form id="training-form" method="POST">
+            <div id="training-form">
                 <div id="form-section">
                     <div class="name-container">
                         <label for="model-name">Model Name:</label>
@@ -37,6 +37,9 @@
 
                     <div class="checkbox-container">
                         <label for="training-data">Check the features you want to train the model on:</label>
+                        <button id="select-all" type="button">Select All</button>
+                        <button id="deselect-all" type="button">Deselect All</button>
+                        <button id="select-hc" type="button">Select High Correlated Features, as shown in EDA</button>
                         {% for feature in features %}
                             <div>
                                 <input type="checkbox" id="{{ feature }}" name="features" value="{{ feature }}">
@@ -47,9 +50,9 @@
                 </div>
 
                 <button type="submit" id="training-button">Train Model</button>
-            </form>
+            </div>
 
-            <p id="training-result">Here will be the results</p>
+            <p id="status">Here will be the results</p>
         </div>
     </main>
 </body>
