--- a/templates/training.html
+++ b/templates/training.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Price Regression Prediction</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/training_style.css') }}">
+    <script src="{{ url_for('static', filename='js/training_script.js') }}" defer></script>
 </head>
 <body>
     <header>
