Add page to display and delete trained models Add funcionality to delete .pkl file and metadata from json file Modify funcionality to update metadata to manage both inserting a new model and deleting an existing one

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
             <ul>
                 <li><a href="{{ url_for('train') }}">Training</a></li>
                 <li><a href="{{ url_for('prediction') }}">Prediction</a></li>
+                <li><a href="{{ url_for('view_models') }}">Models</a></li>
+                <li><a href="{{ url_for('eda') }}">EDA</a></li>
             </ul>
         </nav>
     </header>
