--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Price Regression Homepage</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/style.css') }}">
-    <script src="{{ url_for('static', filename = 'js/script.js') }}" defer></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/index_style.css') }}">
 </head>
-<body>
+<body class="container">
     <header>
         <h1>Welcome to the House Price Regression App</h1>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="{{ url_for('train') }}">Training</a></li>
                 <li><a href="{{ url_for('prediction') }}">Prediction</a></li>
@@ -19,4 +18,6 @@
             </ul>
         </nav>
     </header>
+    <p id="documentation">...</p>
+</body>
 </html>
