--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -10,30 +10,41 @@
 <body>
     <header>
         <h1>House Price Prediction</h1>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('train') }}">Training</a></li>
+                <li><a href="{{ url_for('view_models') }}">Models</a></li>
                 <li><a href="{{ url_for('eda') }}">EDA</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Choose a Model between those available</h2>
-        <div id="models-list"></div>
-
-        <h2>Model Information</h2>
-        <div id="model-info"></div>
+        <div id="model-selection">
+            <div class="model-list-container">
+                <h2>Choose a Model between those available</h2>
+                <div id="models-list"></div>
+            </div>
+        
+            <div class="model-list-container">
+                <h2>Model Information</h2>
+                <div id="model-info"></div>
+            </div>
+        </div>
 
         <h2>Make a Prediction</h2>
-        <input type="checkbox" id="accept-nan">
-        <label for="accept-nan">If this box is checked, not-filled box' features will be set with median values 
-            for numerical features and most frequent values for categorical features</label>
-        <div id="prediction-form"></div>
+        <div id="nan-option">
+            <input type="checkbox" id="accept-nan">
+            <label for="accept-nan">Check this box to assume non-filled boxes to have a value of the median for numerical features and most frequent for categorical features</label>
+        </div>
+        
+        <div id="prediction-section">
+            <div id="prediction-form"></div>
 
-        <button id="predict-button">Predict</button>
+            <button id="predict-button">Predict</button>
 
-        <div id="prediction-result"></div>
+            <p id="prediction-result">Here will be the result of the prediction</p>
+        </div>
     </main>
 </body>
 </html>
