--- a/templates/training.html
+++ b/templates/training.html
@@ -10,10 +10,12 @@
 <body>
     <header>
         <h1>House Price Training</h1>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('prediction') }}">Prediction</a></li>
+                <li><a href="{{ url_for('view_models') }}">Models</a></li>
+                <li><a href="{{ url_for('eda') }}">EDA</a></li>
             </ul>
         </nav>
     </header>
@@ -42,19 +44,21 @@
                             <button id="deselect-all" type="button">Deselect All</button>
                         </div>
                         <button id="select-hc" type="button">Select High Correlated Features, as shown in EDA</button>
-                        {% for feature in features %}
-                            <div>
-                                <label for="{{ feature }}">{{ feature }}</label>
-                                <input type="checkbox" id="{{ feature }}" name="features" value="{{ feature }}">
-                            </div>
-                        {% endfor %}
+                        <div id="training-data">
+                            {% for feature in features %}
+                                <div class="checkbox-item">
+                                    <input type="checkbox" id="{{ feature }}" name="features" value="{{ feature }}">
+                                    <label for="{{ feature }}">{{ feature }}</label>
+                                </div>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
 
                 <button type="submit" id="training-button">Train Model</button>
             </div>
 
-            <p id="status">Here will be the results</p>
+            <p id="status">Here will be the results of the training</p>
         </div>
     </main>
 </body>
