Add some information about the App in index page

--- a/templates/eda.html
+++ b/templates/eda.html
@@ -50,8 +50,8 @@
             <div id="correlations" class="eda-section">
                 <h2>Correlations</h2>
                 <img src="{{ url_for('static', filename='eda/correlation_heatmap.png') }}" alt="Correlation Heatmap">
-                <p>Pearson correlation heatmap showing linear relationship between features.</p>
-                <p>Last column (or last row) show the correlation between the target variable and the other features.</p>
+                <p>Pearson correlation heatmap showing linear relationships between features.</p>
+                <p>Last column (or last row) show the correlation between the target variable and the other numerical features.</p>
             </div>
 
             <div id="plots" class="eda-section">
