Add new models: GB and RF with hyperparameters tuning

--- a/templates/training.html
+++ b/templates/training.html
@@ -34,6 +34,8 @@
                             <option value="linear_regression">Linear Regression</option>
                             <option value="gradient_boosting">Gradient Boosting</option>
                             <option value="random_forest">Random Forest</option>
+                            <option value="gradient_boosting_tuned">Gradient Boosting Tuned</option>
+                            <option value="random_forest_tuned">Random Forest Tuned</option>
                         </select>
                     </div>
 
