Correction of some texts

--- a/templates/eda.html
+++ b/templates/eda.html
@@ -14,7 +14,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('train') }}">Training</a></li>
                 <li><a href="{{ url_for('prediction') }}">Prediction</a></li>
-                <li><a href="{{ url_for('view_models') }}">EDA</a></li>
+                <li><a href="{{ url_for('view_models') }}">Models</a></li>
             </ul>
         </nav>
     </header>
