--- a/templates/eda.html
+++ b/templates/eda.html
@@ -118,7 +118,7 @@
                     <li>Quality matters more than size; in fact, features which express quality (Overall, Kitchen, Exter) have higher correlations.</li>
                     <li>Neighborhood has a strong impact on price; as expected, the location is important on the price.</li>
                     <li>House style also matters; houses with more than one story tend to have higher prices.</li>
-                    <li>Practical amenities (that is, used spaces), like Garage and Basament, tend to increase the price more than just sheer dimensions.</li>
+                    <li>Practical amenities (that is, used spaces), like Garage and Basement, tend to increase the price more than just sheer dimensions.</li>
                     <li>Sale condition affects the price; houses sold under normal conditions tend to have higher prices.</li>
                     <li>There are some outliers given by large, poor-quality homes or by special sales.</li>
                 </ul>
