--- a/templates/index.html
+++ b/templates/index.html
@@ -19,19 +19,15 @@
         </nav>
     </header>
     <h2 id="documentation">Information about the App</h2>
-    <p>This web application is designed to predict house prices based on various features of the houses.
-       It provides functionalities for training regression models, making predictions, and performing exploratory data analysis (EDA).</p>
+    <p>This application is designed to predict house prices based on various features of the houses.
+       It provides functionalities for training regression models, making predictions, and  explore data analysis.</p>
     <h3>Features:</h3>
     <ul id="features-list">
         <li class="feature">Training: it is possible to train a model by giving it a name, choosing which type of regression to use
             and selecting the features on which the training will be based (the features names are the same as the columns of the dataset).</li>
-        <li class="feature">Prediction: it is possible to make a prediction by selecting a model (that has already been trained)
-            and providing the values for the features requested.
-            It is also possible to leave some features blank, in which case the median value will be used for
-            numerical features and the most frequen value for categorical features.</li>
-        <li class="feature">Models: it is possible to view the models that have already been trained, and also delete them if desired.</li>
-        <li class="feature">EDA: it is possible to view performed exploratory data analysis on the dataset. More information can be
-            found on the EDA page.
-        </li>
+        <li class="feature">Prediction: it is possible to make a prediction by selecting a model (between those that have been trained)
+            and providing the values for all the features requested.</li>
+        <li class="feature">Models: it is possible to view the models that have been trained, and also delete them if desired.</li>
+        <li class="feature">EDA: it is possible to view performed exploratory data analysis on the dataset.</li>
 </body>
 </html>
