--- a/templates/training.html
+++ b/templates/training.html
@@ -34,8 +34,7 @@
                             <option value="linear_regression">Linear Regression</option>
                             <option value="gradient_boosting">Gradient Boosting</option>
                             <option value="random_forest">Random Forest</option>
-                            <option value="gradient_boosting_tuned">Gradient Boosting Tuned</option>
-                            <option value="random_forest_tuned">Random Forest Tuned</option>
+                            <option value="gradient_descent">Gradient Descent</option>
                         </select>
                     </div>
 
