--- a/static/css/eda_style.css
+++ b/static/css/eda_style.css
@@ -63,9 +63,19 @@ h2 {
     margin: 0;
 }
 
-#table-section {
+#table-section1 {
     max-width: 100%;
     overflow-x: auto;
+}
+
+#table-section2 {
+    width: fit-content;
+}
+
+#summary {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #plots {
